--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             })
         </script>
     </div>
+    
+    <h3><a href="https://elisample.github.io/index2">Tableau Visualization</a></h3>
+    <h3>< a href="">Download the documentation</a></h3>
 </body>
 </html>
