--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     </div>
     
     <h3><a href="https://elisample.github.io/index2">Tableau Visualization</a></h3>
-    <h3>< a download="ElijahSample_NewmN328_FinalProjectDocumentation.pdf">Download the documentation</h3>
+    <h3>< a href="ElijahSample_NewmN328_FinalProjectDocumentation.pdf">Download the documentation</h3>
 </body>
 </html>
