--- a/index2.html
+++ b/index2.html
@@ -10,5 +10,7 @@
   <h2>This is what the D3 is supposed to look like</h2>
   <div id="vizContainer"></div>
   <script src="./app.js"></script>
+  <h3><a href="https://elisample.github.io/index">D3 Visualization Attempt</a></h3>
+  <h3><a href="https://elisample.github.io/ElijahSample_NewmN328_FinalProjectDocumentation.pdf">View the documentation</a></h3>
 </body>
 </html>
