--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,6 @@
   <div id="vizContainer"></div>
   <script src="./app.js"></script>
   <h3><a href="https://elisample.github.io/index">D3 Visualization Attempt</a></h3>
-  <h3><a href="https://elisample.github.io/ElijahSample_NewmN328_FinalProjectDocumentation.pdf">View the documentation</a></h3>
+  <h3><a href="https://elisample.github.io/documentation">View the documentation</a></h3>
 </body>
 </html>
