--- a/documentation.html
+++ b/documentation.html
@@ -25,7 +25,7 @@ The second visible thing regarding this data is that Rock, a generally middle-ag
 
 
 <h1>Video</h1>
-<video width="320" height="240">
+<video width="320" height="240" controls>
   <source src="elisampe.gitbu.io/Presentation.mp4">
 </video>
 
